--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }
 
+[dev-dependencies]
+rstest = "0.19.0"
+
