--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ name = "keyboard-hook"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "keyboard_hook"
+path = "src/lib.rs"
 
 [dependencies]
 winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }
