--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "keyboard-hook"
+name = "keyboard_hook"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,7 +8,7 @@ name = "keyboard_hook"
 path = "src/lib.rs"
 
 [dependencies]
-winapi = { version = "0.3", features = ["winuser", "libloaderapi"] }
+winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }
 
 [dev-dependencies]
 rstest = "0.19.0"
